<resources>
    <string name="app_name">Classroom Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="english_name">English Name</string>
    <string name="korean_name">Korean Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="message">Message</string>
    <string name="choose_date_of_birth">Choose date of birth</string>
    <string name="add_new_student">Add New Student</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="choose_classroom">Choose Classroom</string>
    <string name="add_new_classroom">Add New Classroom</string>
    <string name="classroom_name">Classroom Name</string>
    <string name="students">Students</string>
    <string name="choose_students">Choose Students</string>
    <string name="student_list_is_empty">Student list is currently empty</string>
    <string name="search">Search</string>
    <string name="order_by_english_name">Order By: English Name</string>
    <string name="order_by_korean_name">Order By: Korean Name</string>
    <string name="order_by_age_desc">Order By: Age Descending</string>
    <string name="order_by_age_asc">Order By: Age Ascending</string>
    <string name="use_students_names">Use student names</string>
    <string name="choose_date">Choose Date</string>
    <string name="attendance">Attendance</string>
    <string name="homework">Homework</string>
    <string name="add_notes">Add Notes</string>
    <string name="cofirm">Confirm</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="student_records">Records</string>
    <string name="abr_attendance">ATTN</string>
    <string name="abr_homework">H/W</string>
    <string name="classes_attended">Classes Attended</string>
    <string name="homework_rate">Homework Rate</string>
    <string name="attendance_rate">Attendance Rate</string>
    <string name="classroom">Classroom</string>
    <string name="abr_notes">MSG</string>
    <string name="fake_korean_phone_number">010-123-45678</string>
    <string name="facebook_app_id">107583459604874</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="title_text">Title</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="error_null_person">Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.</string>
    <string name="signed_in_error">Signed in error</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="signing_in">Signing In</string>
    <string name="no_classrooms">You don\'t have any classrooms</string>
    <string name="no_students">You don\'t have any students</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="message_hint">Message</string>
    <string name="welcome_to_classroom_manager">Welcome to Classroom Manager</string>
    <string name="edit">Edit</string>
</resources>
