<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/add_new_classroom"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/classroom_name"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_new_classroom_classroom_name"
                    android:layout_width="0dp"
                    android:layout_weight="70"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/add_new_classroom_use_student_names"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:text="@string/use_students_names"
                    android:layout_weight="30"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:checked="false" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/students"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/add_new_classroom_student_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_list_is_empty" />

            <Button
                android:id="@+id/add_new_classroom_student_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_students" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_new_classroom_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/cancel"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/add_new_classroom_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/add"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>