<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="35"
        android:layout_height="match_parent">
        <com.pkmmte.view.CircularImageView
            android:id="@+id/image"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:shadow="true"/>
        <TextView
            android:id="@+id/fragment_student_record_english_name"
            android:layout_width="match_parent"
            android:layout_toRightOf="@id/image"
            android:layout_alignTop="@id/image"
            android:paddingLeft="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:text="Amy" />
        <TextView
            android:id="@+id/fragment_student_record_korean_name"
            android:layout_width="match_parent"
            android:layout_below="@id/fragment_student_record_english_name"
            android:layout_toRightOf="@id/image"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="KOR" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/attendance" />

        <CheckBox
            android:id="@+id/fragment_student_record_attendance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/homework" />

        <CheckBox
            android:id="@+id/fragment_student_record_homework"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_student_record_add_notes"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:textSize="8sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/add_notes" />
</LinearLayout>