<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="24dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <ImageView
                    android:id="@+id/english_name_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="85"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/english_name_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/english_name"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <ImageView
                    android:id="@+id/korean_name_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/korean_name_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/korean_name"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"
                        android:inputType="phone"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <ImageView
                    android:id="@+id/date_of_birth_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:orientation="vertical">

                <Button
                    android:id="@+id/date_of_birth_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date_of_birth"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <ImageView
                    android:id="@+id/classroom_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/classroom_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_classroom"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <ImageView
                    android:id="@+id/message_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/message_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/message_hint"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>