<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="24dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <ImageView
                        android:id="@+id/english_name_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="85"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/english_name_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:hint="@string/english_name"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <ImageView
                        android:id="@+id/korean_name_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/korean_name_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/korean_name"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/phone_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fake_korean_phone_number"
                        android:inputType="phone"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <ImageView
                        android:id="@+id/date_of_birth_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/date_of_birth_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Choose Date Of Birth"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <ImageView
                        android:id="@+id/classroom_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/classroom_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Choose Classroom"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <ImageView
                        android:id="@+id/message_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/message_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/message"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_anchor="@id/image"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>